--- a/style.css
+++ b/style.css
@@ -207,3 +207,89 @@ li {
 		width: 350px;
 	}
 }
+footer {
+	width: 100vw;
+	 height: 32vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: #DA3F30;
+
+}
+.containerFooter__Icone__img{
+	width: 80px;
+	height: 80px;
+
+}
+p {
+	color:#fff;
+	width: 13vw;
+/*	margin-left: 90px;*/
+	font-weight:bold;
+	margin-top:0;
+	margin-bottom:0;
+	/*background-color: blue;*/
+}
+.containerFooterContatos{
+	width: 40vw;
+	display: flex;
+	flex-direction: column;
+}
+.containerFooterContatos__icoetxt{
+	display: flex;
+	align-items: flex-start;
+	margin: .5rem 0;
+}
+.containerFooterContatos__img{
+	width: 20px;
+	margin-right: .5rem;
+}
+.containerFooterContatos__txt{
+}
+.containerFooter_FOTOS{	
+	width: 10vw;
+	height: 35vh;
+	display: flex;
+	flex-direction: row;
+	margin-right: 100px;
+}
+.containerFooter_FOTO_one{
+	width: 12vw;
+	height: 30vh;
+	margin-left: 10px;
+	margin-top: 10px;
+	position: relative;
+}
+.containerFooter_FOTO_two{
+	width: 10vw;
+	height: 30vh;	
+	margin-left: 130px;
+	margin-top: 10px;
+	position: absolute;
+}
+.containerFooter_BASE{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	height: 8vh;
+}
+.containerFooter_BASE_authorship{
+	width: 250px;
+	font-size: 10px;
+	color: black;
+	margin-left: 500px;
+	font-family: sans-serif;
+}
+.containerFooter_BASE_logo{
+	display: flex;
+	flex-direction: row;
+	width: 5vw;
+	height: 5vh;
+	align-items: center;
+	margin-right: 600px;
+	margin-bottom: 100px;
+}
+
+
+
+
