--- a/style.css
+++ b/style.css
@@ -214,26 +214,25 @@ footer {
 	justify-content: space-around;
 	align-items: center;
 	background-color: #DA3F30;
-
 }
 .containerFooter__Icone__img{
 	width: 80px;
 	height: 80px;
-
+	margin-left: 80px;
 }
 p {
 	color:#fff;
 	width: 13vw;
-/*	margin-left: 90px;*/
 	font-weight:bold;
+	margin-left: 80px;
 	margin-top:0;
 	margin-bottom:0;
-	/*background-color: blue;*/
 }
 .containerFooterContatos{
 	width: 40vw;
 	display: flex;
 	flex-direction: column;
+	margin-left: 200px;
 }
 .containerFooterContatos__icoetxt{
 	display: flex;
@@ -243,15 +242,19 @@ p {
 .containerFooterContatos__img{
 	width: 20px;
 	margin-right: .5rem;
+	margin-left: 100px;
 }
 .containerFooterContatos__txt{
+	margin-left: 3px;
 }
 .containerFooter_FOTOS{	
 	width: 10vw;
 	height: 35vh;
 	display: flex;
 	flex-direction: row;
-	margin-right: 100px;
+	margin-left: 50px;
+	margin-top: 30px;
+	margin-right: 200px;
 }
 .containerFooter_FOTO_one{
 	width: 12vw;
@@ -264,12 +267,13 @@ p {
 	width: 10vw;
 	height: 30vh;	
 	margin-left: 130px;
-	margin-top: 10px;
+	margin-top: 5px;
 	position: absolute;
 }
 .containerFooter_BASE{
 	display: flex;
 	justify-content: center;
+	margin-top: 10px;
 	width: 100%;
 	height: 8vh;
 }
@@ -277,6 +281,7 @@ p {
 	width: 250px;
 	font-size: 10px;
 	color: black;
+	margin-top: 10px;
 	margin-left: 500px;
 	font-family: sans-serif;
 }
@@ -286,8 +291,8 @@ p {
 	width: 5vw;
 	height: 5vh;
 	align-items: center;
-	margin-right: 600px;
-	margin-bottom: 100px;
+	margin-right: 630px;
+	margin-bottom: 200px;
 }
 
 
