mudei responsivo e html nos contatos

--- a/style.css
+++ b/style.css
@@ -208,53 +208,105 @@ li {
 	}
 }
 footer {
-	width: 100vw;
-	height: 32vh;
+	width: 100%;
+	height: 250px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	background-color: #DA3F30;
 }
+@media (max-width: 768px){
+	footer{
+		width: 100vw;
+		height: 249px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+}
 .containerFooter__Icone__img{
 	width: 80px;
 	height: 80px;
 	margin-left: 100px;
-	margin-top: 0;
+	margin-top: 1px;
+}
+@media (max-width: 768px){
+	.containerFooter__Icone__img{
+		width: 90px;
+		height: 90px;
+		margin-left: 5px;
+		margin-top: 1px;
+	}
 }
 p {
 	color:#fff;
 	width: 15vw;
 	font-weight:bold;
 	margin-left: 100px;
-	margin-top:0;
-	margin-bottom:0;
+	margin-top: ;
+	margin-bottom: 0;
+}
+@media (max-width: 768px){
+	p{
+		width: 15vw;
+		margin-left: 5px;
+	}
 }
 .containerFooterContatos{
-	width: 70vw;
+	width: 60vw;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin-left: 190px;
+	margin-left: 100px;
+	margin-top: 1px;
 	background-color: green;
 }
-.containerFooterContatos__icoetxt{
+@media (max-width: 768px){
+	.containerFooterContatos{
+		width: 70vw;
+		display: flex;
+		justify-content: center;
+		margin-top: 5px;
+		margin-left: 5px;
+	}
+}
+.containerFooterContatos__icoetxt-01{
 	width: 15px;
 	height: 15px;
 	display: flex;
 	margin: .5rem 0;
 	/*background-color: yellow;*/
 }
+@media (max-width: 768px){
+	.containerFooterContatos__icoetxt{
+		width: 15px;
+		height: 15px;
+		display: flex;
+	}
+}
 .containerFooterContatos__img{
+	display: flex;
 	width: 15px;
 	height: 15px;
 	margin-right: .5rem;
 	margin-left: 100px;
 	/*background-color: blue;*/
 }
+@media (max-width: 768px){
+	.containerFooterContatos__img{
+		display: flex;
+	}
+}
 .containerFooterContatos__txt{	
 	margin-left: 3px;
 	align-items: center;
 	/*background-color: red;*/
+}
+@media (max-width: 768px){
+	.containerFooterContatos__txt{
+		width: 10px;
+		display: flex;
+	}
 }
 .containerFooter_FOTOS{	
 	width: 10vw;
@@ -265,18 +317,23 @@ p {
 	margin-top: 30px;
 	margin-right: 200px;
 }
+@media (max-width: 768px){
+	.containerFooter_FOTOS{
+		display: none;
+	}
+}
 .containerFooter_FOTO_one{
 	width: 12vw;
-	height: 30vh;
+	height: 309,88px;
 	margin-left: 10px;
-	margin-top: 10px;
+/*	margin-top: .25rem;*/
 	position: relative;
 }
 .containerFooter_FOTO_two{
 	width: 10vw;
-	height: 30vh;	
-	margin-left: 130px;
-	margin-top: 5px;
+	height: 294,38px;	
+	margin-left: 133px;
+	/*margin-top: .25rem;*/
 	position: absolute;
 }
 .containerFooter_BASE{
@@ -284,7 +341,12 @@ p {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	height: 8vh;
+}
+@media (max-width: 768px){
+	.containerFooter_BASE{
+		display: flex;
+		width: 100%;
+	}
 }
 .containerFooter_BASE_authorship{
 	width: 130px;
@@ -300,46 +362,3 @@ p {
 .containerFooter__texto{
 	width: 175px;
 }
-@media (max-width: 768px){
-	footer{
-		height: 350px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-	.containerFooter__Icone__img{
-		width: 90px;
-		height: 90px;
-		margin-left: 0;
-	}
-	p{
-		width: 15vw;
-		margin-left: 0;
-	}
-	.containerFooterContatos{
-		width: 70vw;
-		display: flex;
-		justify-content: center;
-		margin-left: 0;
-	}
-	.containerFooterContatos__icoetxt{
-		/*width: 15px;*/
-		display: flex;
-	}
-	.containerFooterContatos__txt{
-		/*width: 10px;*/
-		display: flex;
-	}
-	.containerFooter_FOTOS{
-		display: none;
-	}
-	.containerFooter_BASE{
-		display: flex;
-		width: 30px;
-	}
-}
-
-
-
-
-
