--- a/style.css
+++ b/style.css
@@ -207,11 +207,10 @@ li {
 		width: 350px;
 	}
 }
-footer {
+footer{
 	width: 100%;
-	height: 250px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	background-color: #DA3F30;
 }
@@ -225,10 +224,12 @@ footer {
 	}
 }
 .containerFooter__Icone__img{
-	width: 80px;
-	height: 80px;
+	width: 90px;
+	height: 90px;
+	display: flex;
 	margin-left: 100px;
-	margin-top: 1px;
+	margin-top: 0;
+	margin-bottom: 50px;
 }
 @media (max-width: 768px){
 	.containerFooter__Icone__img{
@@ -238,27 +239,39 @@ footer {
 		margin-top: 1px;
 	}
 }
-p {
-	color:#fff;
+.containerFooter__texto-1 {
 	width: 15vw;
-	font-weight:bold;
+	font-weight: bold;
+	display: flex;
 	margin-left: 100px;
-	margin-top: ;
-	margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: .5rem;
+	color: #fff;
+	/*background-color: black;*/
 }
 @media (max-width: 768px){
-	p{
+	.containerFooter__texto-1{
 		width: 15vw;
-		margin-left: 5px;
+		margin-left: 2px;
 	}
 }
-.containerFooterContatos{
-	width: 60vw;
+.containerFooter__texto-2{
+	width: 15vw;
+	justify-content: space-between;
+	display: flex;
+	font-weight:bold;
+	margin-left: 100px;
+	margin-top: 0;
+	margin-bottom: .5rem;
+	color:#fff;
+}
+.containerFooter__CONTATOS{
+	width: 70vw;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin-left: 100px;
-	margin-top: 1px;
+	margin-left: 70px;
+	margin-bottom: 60px;
 	background-color: green;
 }
 @media (max-width: 768px){
@@ -271,42 +284,64 @@ p {
 	}
 }
 .containerFooterContatos__icoetxt-01{
-	width: 15px;
-	height: 15px;
 	display: flex;
-	margin: .5rem 0;
-	/*background-color: yellow;*/
+	background-color: yellow;
 }
 @media (max-width: 768px){
-	.containerFooterContatos__icoetxt{
+	.containerFooterContatos__icoetxt-01{
 		width: 15px;
 		height: 15px;
 		display: flex;
+		flex-direction: row;
+		background-color: yellow;
 	}
 }
-.containerFooterContatos__img{
+.containerFooterContatos__txt-01{
+	display: flex;
+	flex-direction: row;
+}
+.containerFooterContatos__img-1{
 	display: flex;
 	width: 15px;
 	height: 15px;
-	margin-right: .5rem;
+	margin-right: 0;
 	margin-left: 100px;
-	/*background-color: blue;*/
+	background-color: blue;
 }
 @media (max-width: 768px){
 	.containerFooterContatos__img{
 		display: flex;
 	}
 }
-.containerFooterContatos__txt{	
-	margin-left: 3px;
-	align-items: center;
-	/*background-color: red;*/
+
+.containerFooterContatos__icoetxt-02{	
+	display: flex;
+	background-color: red;
 }
 @media (max-width: 768px){
-	.containerFooterContatos__txt{
-		width: 10px;
+	.containerFooterContatos__icoetxt-02{
+		width: 0;
 		display: flex;
 	}
+}
+.containerFooterContatos__img-2{
+	display: flex;
+	width: 15px;
+	height: 15px;
+	margin-right: 0;
+	margin-left: 100px;
+	background-color: blue;
+}
+.containerFooterContatos__icoetxt-03{
+	display: flex;
+}
+.containerFooterContatos__img-3{
+	display: flex;
+	width: 15px;
+	height: 15px;
+	margin-right: .5rem;
+	margin-left: 100px;
+	background-color: yellow;
 }
 .containerFooter_FOTOS{	
 	width: 10vw;
@@ -325,15 +360,15 @@ p {
 .containerFooter_FOTO_one{
 	width: 12vw;
 	height: 309,88px;
+	margin-top: 18px;
 	margin-left: 10px;
-/*	margin-top: .25rem;*/
 	position: relative;
 }
 .containerFooter_FOTO_two{
 	width: 10vw;
-	height: 294,38px;	
+	height: 294,38px;
+	margin-top: 15px;	
 	margin-left: 133px;
-	/*margin-top: .25rem;*/
 	position: absolute;
 }
 .containerFooter_BASE{
@@ -350,6 +385,7 @@ p {
 }
 .containerFooter_BASE_authorship{
 	width: 130px;
+	display: flex;
 	font-size: 13px;
 	color: black;
 	margin-top: 10px;
@@ -358,7 +394,4 @@ p {
 .containerFooter_BASE_logo{
 	height: 5vh;
 	margin-right: 150px;
-}
-.containerFooter__texto{
-	width: 175px;
 }
