--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ main {
 	align-items: center;
 	background-color: #EFF6F8;
 }
-
 .containerlove__blockfirst {
 	width: 50vw;
 	display: flex;
@@ -94,25 +93,22 @@ main {
 	height: 370px;
 }
 .containerprodutos__blocksecond {
-	width: 30%;
+	width: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 }
-.containerprodutos__blocklist {
-	width: 70vw;
-	height: 20vh;
-	display: flex;
-	align-items: center;
-}
 .containerprodutos__paragrafo {
-	width: 16vw;
+	width: 160px;
 	font-size: 18px;
 	align-self: center;
 	color: #3E4D4F;
 }
-li {
+.blocknoorder {
+	width: 30%;
+}
+.blocklist {
 	font-size: 18px;
 	font-weight: bold;
 	color: #3E4D4F;
@@ -148,13 +144,13 @@ li {
 		height: 60vh;
 	}
 	.containerprodutos__img {
-		height: 302px;
+		height: 300px;
 	}
 	.containerprodutos__paragrafo {
-		font-size: 14px;
+		font-size: 16px;
 	}
-	li {
-		font-size: 14px;
+	.blocklist {
+		font-size: 16px;
 	}
 }
 @media (max-width: 605px) {
@@ -165,32 +161,44 @@ li {
 		line-height: 2;
 	}
 	.containerobjetivos {
+		height: 80vh;
 		flex-direction: column-reverse;
 	}
+	.containerobjetivos__blockfirst {
+		height: 25vh;
+	}
 	.containerobjetivos__photos {
+		height: 120px;
 	}
 	.containerobjetivos__table {
-    	width: 460px;
+    	width: 390px;
+    }
+    .containerobjetivos__blocksecond {
+    	height: 45vh;
     }
 	.containerprodutos{
-		height: 60vh;
+		height: 70vh;
 		flex-direction: column-reverse;
 	}
 	.containerprodutos__blockfirst {
 	    width: 50%;
 	    height: 30vh;
+	    order: 1;
 	}
 	.containerprodutos__img {
-    	height: 160px;
+    	height: 280px;
 	}
-	.containerprodutos__blocklist {
-		flex-direction: column-reverse;
+	.containerprodutos__blocksecond {
+		width: 100vw;
+		order: 2;
 	}
 	.containerprodutos__paragrafo {
-	    width: 30vw;
-	    font-size: 13px;
+	    font-size: 16px;
 	}
-	li {
+	.blocknoorder {
+		width: 30%;
+	}
+	.blocklist {
     	font-size: 15px;
 	}
 }
@@ -199,7 +207,7 @@ li {
 		height: 360px;
 	}
 	.containerobjetivos {
-		height: 75vh;
+		height: 65vh;
 	}
 	.containerobjetivos__blockfirst {
 		height: 15vh;
@@ -208,33 +216,21 @@ li {
 		height: 100px;
 	}
 	.containerobjetivos__blocksecond {
-		height: 50vh;
+		height: 45vh;
 	}
 	.containerobjetivos__title {
-		font-size: 20px;
+		font-size: 18px;
 	}
 	.containerobjetivos__table {
 		width: 320px;
 	}
-	.containerprodutos {
-		height: 80vh;
-	}
 	.containerprodutos__img {
-		height: 205px;
-	}
-	.containerprodutos__blockfirst {
-		order: 1;
+		height: 250px;
 	}
 	.containerprodutos__blocksecond {
-		width: 100vw;
-		order: 2;
+		width: 300px;
 	}
-	.containerprodutos__paragrafo {
-		width: 65vw;
-    	font-size: 16px;
-	}
-	.containerprodutos__blocklist {
-		width: 60vw;
-		order: 1;
+	.blocknoorder {
+		width: 50%;
 	}
 }
