--- a/style.css
+++ b/style.css
@@ -6,54 +6,73 @@
 	text-decoration: none;
 	list-style: none;	
 }
-.containerfooter{
+footer{
 	display: flex;
+	flex-direction: column;
+}
+.containerfooter{
 	width: 100%;
-	height: 349px;
+	padding: 10px;
+	display: flex;
+	/*height: 320px;*/
 	justify-content: space-around;
 	align-items: center;
+	font-size: 20px;
+	font-weight: bold;
 	background-color: #DA3F30;
 }
 @media(max-width: 768px){
 	.containerfooter{
 		flex-direction: column;
 	}
-
 }
 .containerfooter__forlove{
+	width: 200px;
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 95px;
-	margin-left: 30px;
+	justify-content: center;
+	/*margin-left: 60px;*/
+	margin-bottom: 60px;
+	/*background-color: yellow;*/
 }
 .containerfooter__icone__img{
-	width: 80px;
-	height: 80px;
-	display: flex;
+	width: 110px;
+	height: 120;
+	justify-content: center;
 }
-.containerfooter__texto-1{
-	display: flex;
+.containerfooter__texto{
 	color: #fff;
 	font-weight: bold;
+	width: 220px;
+	font-size: 20px;
+
 }
-.containerfooter__texto-2{
-	display: flex;
-	color: #fff;
-	font-weight: bold;
+@media(max-width: 768px){
+	.containerfooter__forlove{
+		width: 100%;
+		align-items: center;
+		text-align: center;
+	}
+	.containerfooter__texto{
+		margin-top: 30px;
+	}
 }
 .containerfooter__contatos{
 	height: 20vh;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	/*align-items: center;*/
 	justify-content: space-between;
-	margin-bottom: 10px;
-	margin-left: 5px;
-	line-height: 20px;
+	padding: 5px;
+	margin-bottom: 20px;
+	/*margin-left: 35px;*/
 }
 .containerfooterContatos__icoetxt-01{
 	display: flex;
 	font-weight: bold;
+	align-items: center;
+	/*background-color: green;*/
 }
 .containerfooterContatos__img-1{
 	width: 20px;
@@ -62,10 +81,12 @@
 .containerfooterContatos__txt-01{
 	color: #fff;
 	font-weight: bold;
+	margin-left: 5px;
 }
 .containerfooterContatos__icoetxt-02{
 	display: flex;
 	font-weight: bold;
+	align-items: center;	
 }
 .containerfooterContatos__img-2{
 	width: 20px;
@@ -73,10 +94,12 @@
 }
 .containerfooterContatos__txt-02{
 	color: #fff;
+	margin-left: 5px;
 }
 .containerfooterContatos__icoetxt-03{
 	display: flex;
 	font-weight: bold;
+	align-items: center;
 }
 .containerfooterContatos__img-3{
 	width: 20px;
@@ -84,12 +107,14 @@
 }
 .containerfooterContatos__txt-03{
 	color: #fff;
+	margin-left: 5px;
 }
 .containerfooter__fotos{
 	display: flex;
+	padding: 30px;
 	position: relative;
-	top: 13px;
-	right: 50px;
+	bottom: 5px;
+	right: 40px;
 }
 @media(max-width: 780px){
 	.containerfooter__fotos{
@@ -98,25 +123,31 @@
 }
 .containerfooter__foto__one{
 	position: absolute;
-	left: 1px;
+	right: 60px;
 }
 .containerfooter__foto__two{
 	position: relative;
-	left: 160px;
-
+	left: 110px;
 }
 .containerfooter__base{
 	width: 100%;
+	padding: 5px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: yellow;
+	/*background-color: yellow;*/
+}
+@media(max-width: 780px){
+	.containerfooter__base{
+		justify-content: center;
+	}
 }
 .containerfooter_base__authorship{
-	font-size: 13px;
+	font-size: 11px;
+	font-weight: 600;
 }
 .containerfooter__base__logo{
 	width: 40px;
 	height: 40px;
-	margin-right: 110px;
+	margin-left: 5px;
 }
