--- a/style.css
+++ b/style.css
@@ -123,13 +123,17 @@ header{
 }
 @media(max-width: 425px){
 	.containerHeader__logo{
-		width: 45px;
-		height: 45px;
+		width: 40px;
+		height: 40px;
 		margin: 0;
 	}
 	.containerHeader__menu {
 		width: 60vw;
 		margin-right: 55px;
+	}
+	.containerHeader__menuLink {
+		font-size: 17px;
+    	margin-left: 10px;
 	}
 	.containerHeader__photo{
 		height: 430px;
